quick format & syntax fixes

--- a/dcf_single_company_valuation.ipynb
+++ b/dcf_single_company_valuation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center>Discounted Cash Flow - Single Company Research</center></h1>\n",
+    "<h1><center>Discounted Cash Flow - Single Company Valuation</center></h1>\n",
     "<center>David Mohammadi</center>\n",
     "<center>April 2022</center>\n"
    ]
@@ -123,7 +123,7 @@
     "---\n",
     "\n",
     "# DCF Model - Process\n",
-    "<b>Steps: \n",
+    "Steps: \n",
     "1. Historical Free Cash Flow Calculation\n",
     "1. Free Cash Flow Forecasting\n",
     "    1. Estimating Growth\n",
@@ -140,7 +140,7 @@
     "    3. Effective Tax Rate\n",
     "1. Terminal, Enterprise & Equity Valuations\n",
     "\n",
-    "</b>\n",
+    "\n",
     "\n",
     "---"
    ]
@@ -573,8 +573,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### 2.B. Ratios of FCF components to Revenue\n",
     "- Using previous year financials to establish the ratios"
    ]
@@ -666,8 +664,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### 2.C. Forecast Revenue & Extrapolate Future FCF Values\n",
     "<b> Extrapolate the next 5 years of values with the constant growth rate & ratios</b>\n",
     "- Assumptions: \n",
@@ -1184,6 +1180,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "# <center>Review Results</center>"
    ]
   },
@@ -1243,34 +1241,6 @@
     "\n",
     "Each growth calculation method shows varying outlooks with a (+/-) 5% buffer added to the original (neutral) growth rate. <br>Horizontal black line shows current stock price"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
